# openarm_mujoco

./: .gitignore  LICENSE  README.md  collision_bodies.xml  mjmodel.xml  openarm.mjcf.xml  openarm_bimanual.mjcf.xml  openarm_bimanual_position.mjcf.xml  openarm_bimanual_v1.xml  pyproject.toml  setup.py
.github/workflows/: test.yaml
dev/: release.sh
docs/superpowers/specs/: 2026-07-08-arm-pedestal-component-design.md
meshes/: J2_v1_1.stl
openarm_mujoco_hardware/include/openarm_mujoco_hardware/: openarm_mujoco_hardware.hpp
openarm_mujoco_hardware/src/: openarm_mujoco_hardware.cpp
openarm_mujoco_v1/: __init__.py
src/openarm_mujoco/: __init__.py
src/openarm_mujoco/v2/: __init__.py  launch.py
src/openarm_mujoco_v2/: __init__.py
v1/: openarm.mjcf.xml  openarm_bimanual.mjcf.xml  openarm_bimanual.xml  openarm_bimanual_v1.xml  openarm_bimanual_v1.xml.backup_before_materials  openarm_unimanual_v1.xml
v1/meshes/arm_obj/link0/: link0.mtl
v1/meshes/arm_obj/link1/: link1.mtl
v1/meshes/arm_obj/link2/: link2.mtl
v1/meshes/arm_obj/link3/: link3.mtl
v1/meshes/body_obj/: body_link0.mtl
v2/: articulated_scene.xml  balance_scene.xml  bottle_scene.xml  catch_bimanual_scene.xml  catch_scene.xml  catch_twoball_scene.xml  cell.xml  contact_scene.xml  move_puck_scene.xml  mujoco_launch.py  openarm_bimanual.xml  openarm_pedestal.xml  pedestal.xml  peg_socket_scene.xml  push_scene.xml  throw_multi_scene.xml  throw_scene.xml  tool_scene.xml  valve_scene.xml
v2/openarm_mujoco_v2/: __init__.py  cell.xml  joint_resolver.py  openarm_v20_bimanual.xml
(+12 files in other folders)
